# celery-redis-flask-docker-demo

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile.celery  Dockerfile.flask  Dockerfile.prometheus  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/prometheus/: prometheus.yml
src/tasks/: celeryconf.py  tasks.py
